--- a/source/Antix.Tests/packages.config
+++ b/source/Antix.Tests/packages.config
@@ -2,8 +2,8 @@
 
 <packages>
   <package id="antix-testing" version="4.0.0-b01" targetFramework="net45" />
-  <package id="EntityFramework" version="6.0.0-alpha3" targetFramework="net45" />
-  <package id="Moq" version="4.0.10827" targetFramework="net45" />
-  <package id="xunit" version="1.9.1" targetFramework="net45" />
-  <package id="xunit.extensions" version="1.9.1" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
+  <package id="Moq" version="4.2.1409.1722" targetFramework="net45" />
+  <package id="xunit" version="1.9.2" targetFramework="net45" />
+  <package id="xunit.extensions" version="1.9.2" targetFramework="net45" />
 </packages>
