--- a/source/Example.MvcApplication.Tests/packages.config
+++ b/source/Example.MvcApplication.Tests/packages.config
@@ -1,13 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CommonServiceLocator" version="1.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="4.0.30506.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.SelfHost" version="4.0.20918.0" targetFramework="net45" />
-  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
-  <package id="Moq" version="4.0.10827" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
-  <package id="Unity" version="2.1.505.2" targetFramework="net45" />
-  <package id="Unity.WebAPI" version="0.10" targetFramework="net45" />
-  <package id="xunit" version="1.9.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.SelfHost" version="5.2.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.2" targetFramework="net45" />
+  <package id="Moq" version="4.2.1409.1722" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.5" targetFramework="net45" />
+  <package id="Unity" version="3.5.1404.0" targetFramework="net45" />
+  <package id="Unity.WebAPI" version="5.1" targetFramework="net45" />
+  <package id="xunit" version="1.9.2" targetFramework="net45" />
 </packages>
